--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
 	"name": "@brianprost/bedrock-abacus",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"license": "MIT",
 	"exports": "./mod.ts",
 	"tasks": {
@@ -8,6 +8,7 @@
 	},
 	"imports": {
 		"@std/assert": "jsr:@std/assert@1",
+		"@std/uuid": "jsr:@std/uuid@^1.0.5",
 		"gpt-tokenizer": "npm:gpt-tokenizer@^2.9.0"
 	},
 	"fmt": {
