--- a/deno.json
+++ b/deno.json
@@ -2,14 +2,14 @@
 	"name": "@brianprost/bedrock-abacus",
 	"version": "0.2.3",
 	"license": "MIT",
-	"exports": "./mod.ts",
-	"tasks": {
-		"dev": "deno run --watch main.ts"
-	},
+	"exports": "./src/index.ts",
 	"imports": {
 		"@std/assert": "jsr:@std/assert@1",
 		"@std/uuid": "jsr:@std/uuid@^1.0.5",
 		"gpt-tokenizer": "npm:gpt-tokenizer@^2.9.0"
+	},
+	"publish": {
+		"include": ["src/**/*.ts", "README.md"]
 	},
 	"fmt": {
 		"useTabs": true
